live/hepui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpeui
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hpeui
  template:
    metadata:
      labels:
        app: hpeui
    spec:
      containers:
        - name: hpeui
          image: 192.168.243.194:30443/library/samples/hpeui:v1.0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: web
            protocol: TCP
          readinessProbe:
            httpGet:
              port: web
              path: /
